# rah.recipemanager.test

./: .env  .gitignore  .python-version  README.MD  pyproject.toml
.ebextensions/: django.config
recipe_manager/: db.sqlite3  requirements.txt
recipe_manager/accounts/: urls.py  views.py
recipe_manager/accounts/templates/accounts/: login.html  signup.html
recipe_manager/common/: constants.py  models.py  services.py  tests.py
recipe_manager/common/measurement/: services.py
recipe_manager/common/measurement/models/: base.py  units.py
recipe_manager/home/: views.py
recipe_manager/home/templates/home/: index.html
recipe_manager/ingredients/: admin.py  models.py  urls.py  views.py
recipe_manager/ingredients/migrations/: 0001_initial.py  0002_alter_ingredient_options_ingredient_article_number_and_more.py
recipe_manager/ingredients/templates/ingredients/: create_form.html  detail.html  edit_form.html  index.html
recipe_manager/recipe_manager/: asgi.py  settings.py  urls.py  wsgi.py
recipe_manager/recipes/: admin.py  models.py  services.py  urls.py  views.py
recipe_manager/recipes/migrations/: 0001_initial.py  0002_alter_recipe_options_alter_recipe_ingredients_and_more.py  0002_recipeingredient_recipe_ingredient.py  0003_remove_recipeingredient_recipe_ingredient.py  0004_recipeingredient_recipe_ingredient.py  0005_auto_20220426_2049.py
recipe_manager/recipes/static/recipes/: main.js
recipe_manager/recipes/templates/recipes/: create_form.html  detail.html  edit_form.html  index.html
recipe_manager/templates/: base.html  header.html
