[tool.poetry]
name = "rah.recipemanager.test"
version = "0.1.0"
description = ""
authors = ["Rafael Henrique <rafael@rah.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
